--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -444,3 +444,15 @@ th{
 .padreset {
 	padding:0;
 }
+
+.popover-content {
+	padding: 5px 7px;
+}
+
+.popover{
+	border: 1px solid #2e81fa;
+}
+
+.fixed{
+	position:fixed;
+}
