--- a/partials/contact/contact.html
+++ b/partials/contact/contact.html
@@ -127,9 +127,9 @@
 
 					<!-- Button -->
 					<div class="form-group">
-						<label class="col-md-4 control-label"></label>
-						<div class="col-md-4">
-							<button type="submit" class="btn btn-warning" >Envoyer <span class="glyphicon glyphicon-send"></span></button>
+						<label class="col-md-12 control-label"></label>
+						<div class="col-md-12">
+							<button type="submit" class="btn btn-warning col-md-12" >Envoyer <span class="glyphicon glyphicon-send"></span></button>
 						</div>
 					</div>
 				</div>
