--- a/partials/contact/contact.html
+++ b/partials/contact/contact.html
@@ -159,6 +159,7 @@
 $(document).ready(function() {
 		$('.navbar-fixed-top').addClass('animated fadeInDown');
     $('#attributeForm').bootstrapValidator();
+		$('.fixed').addClass('animated flipInY');
 		$('.alert-success').css('display','none');
 		$('.control-label').css('display','none');
 		$('.dojoCH').css('display','none');
