--- a/partials/calendrier/calendrier.html
+++ b/partials/calendrier/calendrier.html
@@ -8,7 +8,8 @@
     <script type="text/javascript" src="../../js/vendor/angular/angular.js"></script>
     <script type="text/javascript" src="../../js/fullcal.js"></script>
 
-    <liens></liens>
+    <link rel="stylesheet" href="../../css/vendor/bootstrap/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="../../css/stylesheet.css">
 
     <!-- SCRIPTS GENERAUX NECESSAIRES AU CALENDRIER -->
 
