--- a/partials/mentions/mentions.html
+++ b/partials/mentions/mentions.html
@@ -8,7 +8,9 @@
     <script type="text/javascript" src="../../js/vendor/angular/angular.js"></script>
     <script type="text/javascript" src="../../js/app.js"></script>
 
-    <liens></liens>
+    <link rel="stylesheet" href="../../css/vendor/bootstrap/bootstrap.min.css">
+    <link rel="stylesheet" href="../../css/vendor/nivo_slider/nivo-slider.css">
+    <link rel="stylesheet" type="text/css" href="../../css/stylesheet.css">
 
 </head>
 <body>
