--- a/partials/common/navigation.html
+++ b/partials/common/navigation.html
@@ -1,32 +1,18 @@
-<nav class="navbar navbar-default">
-    <div class="container-fluid">
+<nav class="navbar navbar-default" ng-controller="LiensCtrl">
+    <div class="container-fluid" ng-repeat="lien in liens">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header"> <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>            <img alt="Brand" class="pull-left" src="../../img/logo.png"><a class="navbar-brand" id="title_logo" href="/index.html">Dojo Beauceron</a> </div>
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="navbar">
             <ul class="nav navbar-nav pull-right">
-                <li><a href="/index.html">Accueil<span class="sr-only">(current)</span></a></li>
-                <!--<li><a href="#">Link</a></li>-->
-                <li class="dropdown">
-                    <!--<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Actualités <span class="caret"></span></a>--><a href="#">Actualités <span class="caret"></span></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="/partials/news/news.html">News</a></li>
-                        <li class="active"><a href="/partials/calendrier/calendrier.html">Calendrier</a></li>
+                <li ng-repeat="link in lien.links" ng-class="{ active: lien == lienCourant }"><a href="#{{link.name}}" ng-click="selectionLien(lien)">{{link.li_name}}</a></li>
+
+
+                <li class="dropdown"><a href="#">Le Club <span class="caret">{{link.li_name}}</span></a>
+                    <ul class="dropdown-menu" >
+                        <li ng-repeat="menus in lien.menu"><a href="#{{menus.sName}}">{{menus.sLi}}</a></li>
                     </ul>
                 </li>
-                <li class="dropdown"> <a href="#">Le Club <span class="caret"></span></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="/partials/horaires/horaires.html">Horaires</a></li>
-                        <li><a href="/partials/inscription/Inscription_Tarifs.html">Inscriptions et Tarifs</a></li>
-                        <li><a href="#">Dojos</a></li>
-                        <li><a href="/partials/historique/historique.html">Historique</a></li>
-                        <li><a href="/partials/documents/documents.html">Documents</a></li>
-                    </ul>
-                </li>
-                <li><a href="/partials/resultats/resultats.html">Résultats</a></li>
-                <li><a href="#">Contact</a></li>
-                <form class="navbar-form navbar-left" role="search">
-                    <div class="form-group"> <input type="text" class="form-control" placeholder="Search"> </div> <button type="submit" class="btn btn-default">Rechercher</button> </form>
             </ul>
         </div>
         <!-- /.navbar-collapse -->
