resolution des conflits

--- a/partials/accueil/accueil.html
+++ b/partials/accueil/accueil.html
@@ -1,5 +1,5 @@
 <!-- slide -->
-<slide-accueil></slide-accueil>
+<slide-accueil ng-controller="accueilController as accueilCtrl"></slide-accueil>
 
 
 <!-- discipline -->
