--- a/partials/mentions/mentions.html
+++ b/partials/mentions/mentions.html
@@ -1,34 +1,38 @@
-<!DOCTYPE html>
-<html lang="fr" ng-app="dojo">
-<head>
-	<meta charset="UTF-8">
+<div ng-controller="mentionsController as mentionsCtrl" class="container-fluid">
 
-	<title>Dojo Beauceron - Résultats</title>
+    <div class="row titre_page">
+        <div class="col-xs-12"><h2><span class="glyphicon glyphicon-bookmark" aria-hidden="true"></span> Mentions légales</h2></div>
+    </div>
 
-    <script type="text/javascript" src="../../js/vendor/angular/angular.js"></script>
-    <script type="text/javascript" src="../../js/app.js"></script>
+    <div class="row">
 
-    <link rel="stylesheet" href="../../css/vendor/bootstrap/bootstrap.min.css">
-    <link rel="stylesheet" href="../../css/vendor/nivo_slider/nivo-slider.css">
-    <link rel="stylesheet" type="text/css" href="../../css/stylesheet.css">
+        <div class="col-xs-offset-2 col-xs-8 mentions_legales">
 
-</head>
-<body>
+        <h3>Avertissement</h3>
 
-<!-- NAVIGATION -->
+        <p class="legal_text">Les informations contenues dans le site http://www.judo-beauceron.com n'ont aucune valeur contractuelle.</p>
 
-<navigation></navigation>
+        <h3>Droits d'auteur et de reproduction</h3>
 
-<!-- CORPS DE PAGE-->
+        <p class="legal_text">Le site http://www.judo-beauceron.com est soumis à la législation française et internationale sur les droits d'auteur. Tous les droits de reproduction, sur quelque support que ce soit, sont réservés. La reproduction et l'utilisation du contenu de tout ou partie de ce site autres qu'individuelles et privées sont interdites, sauf autorisation expresse et préalable de l'auteur.</p>
 
-<corps-mentions></corps-mentions>
+        <h3>Directeur de la publication</h3>
 
-<!-- FOOTER -->
+        <p class="legal_text">Bla bla bla<br/>
+        Bla bla Bla<br/>
+        Bla bla bla<br/>
+        Bla bla bla</p>
 
-<pied></pied>
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+        <h3>Hébergement</h3>
 
-</body>
-</html>
+        <p class="legal_text">Bla bla bla<br/>
+        Bla bla bla<br/>
+        Bla bla bla<br/>
+        Bla bla bla</p>
+
+        </div>
+        
+    </div>
+
+</div>
