--- a/partials/contact/contact.html
+++ b/partials/contact/contact.html
@@ -1,73 +1,5 @@
-<!DOCTYPE html>
-<html lang="fr">
-<head>
-	<meta charset="UTF-8">
-	<title>Dojo Beauceron - Accueil</title>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-	<link rel="stylesheet" type="text/css" href="../../css/stylesheet.css">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css" />
-	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD5Urk_tC2vFdLjnexrsKLTPhdtJOumE-g"></script>
-
-
-
-
-</head>
-<body>
-
-	<!-- navigation -->
-
-	<nav class="navbar navbar-default navbar-fixed-top">
-	    <div class="container-fluid">
-	        <!-- Brand and toggle get grouped for better mobile display -->
-	        <div class="navbar-header">
-	            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false">
-	                <span class="sr-only">Toggle navigation</span>
-	                <span class="icon-bar"></span>
-	                <span class="icon-bar"></span>
-	                <span class="icon-bar"></span>
-	            </button>
-	            <img class="pull-left" src="../../img/logo.png"><a class="navbar-brand" id="title_logo" href="#">Dojo Beauceron</a>
-	        </div>
-
-	        <!-- Collect the nav links, forms, and other content for toggling -->
-	        <div class="collapse navbar-collapse" id="navbar">
-	            <ul class="nav navbar-nav navbar-right">
-	                <li class="active"><a href="index.html">Accueil</a></li>
-
-	                <li class="dropdown">
-	                    <!--<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Actualités <span class="caret"></span></a>-->
-	                    <a href="#">Actualités <span class="caret"></span></a>
-	                    <ul class="dropdown-menu">
-	                        <li><a href="news.html">News</a></li>
-	                        <li><a href="#">Calendrier</a></li>
-	                    </ul>
-	                </li>
-	                <li class="dropdown">
-	                    <a href="#">Le Club <span class="caret"></span></a>
-	                    <ul class="dropdown-menu">
-	                        <li><a href="#">Horaires</a></li>
-	                        <li><a href="Inscription_Tarifs.html">Inscriptions et Tarifs</a></li>
-	                        <li><a href="#">Dojos</a></li>
-	                        <li><a href="#">Historique</a></li>
-	                        <li><a href="#">Documents</a></li>
-	                    </ul>
-	                </li>
-	                <li><a href="resultats.html">Résultats</a></li>
-	                <li><a href="#">Contact</a></li>
-	                <form class="navbar-form navbar-left" role="search">
-	                    <div class="form-group">
-	                        <input type="text" class="form-control" placeholder="Search">
-	                    </div>
-	                    <button type="submit" class="btn btn-default">Rechercher</button>
-	                </form>
-	            </ul>
-	    </div><!-- /.navbar-collapse -->
-	  </div><!-- /.container-fluid -->
-	    <div id="liseret"></div>
-	</nav>
-
 <!-- Begin Body -->
-<div class="container " style="margin-top: 150px;">
+<div ng-controller="contactController as contactCtrl" class="container " style="margin-top: 150px;">
     <div class="row">
 			<div class="well fixed col-md-2">
 			<form id="attributeForm" method="post" class="form-horizontal"
@@ -177,10 +109,3 @@ $(document).ready(function() {
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-validator/0.5.3/js/bootstrapValidator.js"></script>
 <script src="../../js/map.js"></script>
-
-
-
-
-
-</body>
-</html>
