--- a/partials/historique/historique.html
+++ b/partials/historique/historique.html
@@ -1,33 +1,50 @@
-<!DOCTYPE html>
-<html lang="fr" ng-app="dojo">
-<head>
-    <meta charset='utf-8' />
+<div ng-controller="historiqueController as historiqueCtrl" class="container">
+    <div class="row">
+        <div class="col-xs-offset-3 col-xs-6" id="historique">
+            <h2>Quand le Tatamis revit</h2>
+            <br><br>
+                <p><strong>Le DOJO BEAUCERON</strong> est un club <em>créé le 19/05/1980</em> par son <strong>Président Fondateur Jean Jacques Le Hénanf</strong>,
+                assisté de <strong>Guy BISSON comme Directeur Technique</strong>.</p>
 
-    <title>Dojo Beauceron - Historique</title>
+                <p>Marqué par la brutale et tragique disparition de Guy Bisson en 2002,
+                ce dernier étant devenu entre temps Président du club, le DOJO BEAUCERON tente de rebondir autour d’une équipe de dirigeants
+                et de professeurs motivés.</p>
 
-    <script type="text/javascript" src="../../js/vendor/angular/angular.js"></script>
-    <script type="text/javascript" src="../../js/app.js"></script>
+                <p>Cependant, la vie d’un club n’est pas toujours un long fleuve tranquille. L’histoire du Dojo beauceron
+                <strong>Chartres-Mainvilliers</strong> en témoigne.</p>
 
-    <link rel="stylesheet" href="../../css/vendor/bootstrap/bootstrap.min.css">
-    <link rel="stylesheet" href="../../css/vendor/nivo_slider/nivo-slider.css">
-    <link rel="stylesheet" type="text/css" href="../../css/stylesheet.css">
+                <p>Celui-ci, qui a formé bon nombre d’enseignants B.E. (Brevet d’Etat) du département,
+                a été frappé par des coups du sort comme le décès en 2002 de son Président Guy Bisson</p>
 
-</head>
-<body>
+            <blockquote>
+                <p>"les dirigeants se sont alors serrés les coudes pour perpétuer l’œuvre pour laquelle Guy s’était tant investi"</p>
+            </blockquote>
+            <p>indique <strong>le secrétaire depuis 2002 Christian Malherbe</strong>. Cependant, un conflit est rapidement apparu avec un enseignant, provoquant une
+                fragilité supplémentaire.</p>
 
-<!-- navigation -->
+            <p>Un noyau de fidèles, composé de dirigeants, enseignants et pratiquants, a alors su tenir le cap et prendre les décisions nécessaires à
+                la survie de l’association rajoute-t-il.</p>
 
-<navigation></navigation>
+            <p> Reparti sur des bases solides, le club va s’attacher à " relancer son tournoi national le challenge <strong>Catherine-Poussard</strong> " annonce Christian Malherbe.</p>
 
-<!-- corps -->
+            <p>"<em>Né en 1987</em>, il est en sommeil depuis 2002. Organisé en mémoire de cette judoka à l’avenir prometteur décédée en <em>1986</em> d’une terrible maladie à l’âge de <em>15 ans</em>
+                , ce challenge accueillait des concurrents de renon " rappelle-t-il.</p>
 
-<corps-historique></corps-historique>
+           <p>Parmi eux, <strong>Isabelle Paque</strong>(championne d’Europe en 1987 +72kg) et <strong>Roger Vachon</strong> (champion d’Europe en 1981 -86kg 7 titres nationaux toutes catégories de
+               1978 à 82 et de 85 à 86) Même <strong>Thierry Rey</strong> (champion olympique en 1980 et champion du monde en 1979 -60kg)le fréquentait, comme coach.</p>
 
-<!-- FOOTER -->
+            <p>Lors de la <em>quinzième édition</em>, il avait été rebaptisé <em>Tournoi national Guy-Bisson - Challenge Catherine-Poussard</em>, en hommage au président disparu.</p>
 
-<pied></pied>
+            <p>Autre souvenir gravé dans l’histoire du club, la venue en 1998 de la championne olympique (1996) et double championne du monde (1995 et 1997)
+                <strong>Marie-Claire Restoux</strong> à l’occasion de la fête annuelle du Dojo beauceron.</p>
 
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+            <p>Assurant des démonstrations avec des judokas du club, elle s’est signalée par " sa disponibilité et ses qualités humaines à la hauteur de son palmarès
+                ", souligne <strong>Giovanni Pili le président depuis 2002</strong>.</p>
 
-</body>
-</html>
+            <p>" Re-grandir avec sagesse ", tel est aujourd’hui l’objectif avancé par l’équipe dirigeante. Doté d’une équipe de professeurs compétents travaillant
+                en parfaite symbiose, le Dojo beauceron peut entrevoir l’avenir avec optimisme. <em>Nicolas Sanson (l’Echo - jeudi 24 Février 2005)</em>
+            </p>
+
+        </div><!-- end col-xs-6 -->
+    </div><!-- end row -->
+</div><!-- end container -->
