--- a/partials/horaires/horaires.html
+++ b/partials/horaires/horaires.html
@@ -1,67 +1,5 @@
-<!DOCTYPE HTML>
-<html>
-	<head>
-		<meta charset = "utf-8"/>
-		<title>Dojo Beauceron - Horaires</title>
-		<link rel="stylesheet" href="css/bootstrap.min.css">
-   		 <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
-    	
-	</head>
 
-	<body>
-		<!-- navigation -->
-
-			<nav class="navbar navbar-default navbar-fixed-top">
-			    <div class="container-fluid">
-			        <!-- Brand and toggle get grouped for better mobile display -->
-			        <div class="navbar-header">
-			            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false">
-			                <span class="sr-only">Toggle navigation</span>
-			                <span class="icon-bar"></span>
-			                <span class="icon-bar"></span>
-			                <span class="icon-bar"></span>
-			            </button>
-			            <img class="pull-left" src="img/logo.png"><a class="navbar-brand" id="title_logo" href="#">Dojo Beauceron</a>
-			        </div>
-
-			        <!-- Collect the nav links, forms, and other content for toggling -->
-			        <div class="collapse navbar-collapse" id="navbar">
-			            <ul class="nav navbar-nav navbar-right">
-			                <li><a href="index.html">Accueil</a></li>
-
-			                <li class="dropdown">
-			                    <!--<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Actualités <span class="caret"></span></a>-->
-			                    <a href="#">Actualités <span class="caret"></span></a>
-			                    <ul class="dropdown-menu">
-			                        <li><a href="news.html">News</a></li>
-			                        <li><a href="#">Calendrier</a></li>
-			                    </ul>
-			                </li>
-			                <li class="dropdown">
-			                    <a href="#">Le Club <span class="caret"></span></a>
-			                    <ul class="dropdown-menu">
-			                        <li class="active"><a href="horaires.html">Horaires</a></li>
-			                        <li><a href="Inscription_Tarifs.html">Inscriptions et Tarifs</a></li>
-			                        <li><a href="#">Dojos</a></li>
-			                        <li><a href="#">Historique</a></li>
-			                        <li><a href="documents.html">Documents</a></li>
-			                    </ul>
-			                </li>
-			                <li><a href="resultats.html">Résultats</a></li>
-			                <li><a href="#">Contact</a></li>
-			                <form class="navbar-form navbar-left" role="search">
-			                    <div class="form-group">
-			                        <input type="text" class="form-control" placeholder="Search">
-			                    </div>
-			                    <button type="submit" class="btn btn-default">Rechercher</button>
-			                </form>
-			            </ul>
-			    </div><!-- /.navbar-collapse -->
-			  </div><!-- /.container-fluid -->
-            <div id="liseret"></div>
-	</nav>
-
-		<div class="container-fluid">
+		<div class="container-fluid" ng-controller="planningController as planningCtrl">
 			<div class="row">
 				<div class="col-xs-12">
 				<h3>Horaires 2016-2017</h3>
@@ -170,18 +108,3 @@
 		</div><!--/container center-block -->
 
 		</div><!-- /container-fluid -->
-
-
-
-
-
-
-
-
-
-<script type="text/javascript" src="js/jquery.js"></script>
-<script src="js/bootstrap.min.js"></script>
-<script type="text/javascript" src="js/documents.js"></script>
-
-</body>
-</html>
