--- a/partials/inscription/Inscription_Tarifs.html
+++ b/partials/inscription/Inscription_Tarifs.html
@@ -1,66 +1,4 @@
-<!DOCTYPE html>
-<html lang="fr">
-<head>
-	<meta charset="UTF-8">
-	<title>Dojo Beauceron - Résultats</title>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-	<link rel="stylesheet" type="text/css" href="css/stylesheet.css">
-</head>
-<body>
-
-<!-- navigation -->
-
-<nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <img alt="Brand" class="pull-left" src="img/logo.png"><a class="navbar-brand" id="title_logo" href="#">Dojo Beauceron</a>
-    </div>
-
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="navbar">
-      <ul class="nav navbar-nav pull-right">
-        <li><a href="index.html">Accueil<span class="sr-only">(current)</span></a></li>
-        <!--<li><a href="#">Link</a></li>-->
-        <li class="dropdown">
-          <!--<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Actualités <span class="caret"></span></a>-->
-          <a href="#">Actualités <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="news.html">News</a></li>
-            <li><a href="#">Calendrier</a></li>
-          </ul>
-        </li>
-        <li class="dropdown">
-          <a href="#">Le Club <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="#">Horaires</a></li>
-            <li><a href="Inscription_Tarifs.html">Inscriptions et Tarifs</a></li>
-            <li><a href="#">Dojos</a></li>
-            <li><a href="#">Historique</a></li>
-            <li><a href="#">Documents</a></li>
-          </ul>
-        </li>
-        <li class="active"><a href="resultats.html">Résultats</a></li>
-        <li><a href="#">Contact</a></li>
-        <form class="navbar-form navbar-left" role="search">
-            <div class="form-group">
-            <input type="text" class="form-control" placeholder="Search">
-            </div>
-            <button type="submit" class="btn btn-default">Rechercher</button>
-        </form>
-      </ul>
-
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
-</nav>
-
-<div class="container-fluid">
+<div ng-controller="inscriptionController as inscriptionCtrl" class="container-fluid">
 
     <div class="row">
         <div class="col-xs-12">
@@ -156,9 +94,3 @@
     </div>
 
 </div>
-
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-
-</body>
-</html>
