ajout controller dans app.js

--- a/partials/documents/documents.html
+++ b/partials/documents/documents.html
@@ -1,3 +1,14 @@
+<script>
+    $(document).ready(function() {
+    $('#myCarousel').carousel({
+    interval: 3000
+    })
+    $('#myCarousel').on('slid.bs.carousel', function() {
+        //alert("slid");
+    });
+});
+</script>
+
 <div class="container" ng-controller="documentsController as doc">
     <!-- Début Carrousel Documents -->
     <div class="well">
@@ -47,3 +58,14 @@
         <!-- /well -->
     </div>
 </div>
+<script>
+    $(document).ready(function() {
+    $('#myCarousel').carousel({
+    interval: 3000
+    })
+    $('#myCarousel').on('slid.bs.carousel', function() {
+        //alert("slid");
+    });
+});
+</script>
+
