reparation des scripts résultats

--- a/partials/accueil/disciplines.html
+++ b/partials/accueil/disciplines.html
@@ -1,4 +1,4 @@
-            <div class="container">
+           <div class="container">
                 <div class="row">
                     <article class="sport col-xs-4" id="judo">
                         <h2 class="text-center">Judo</h2>
@@ -18,7 +18,33 @@
 
                                 <div class="col-xs-4">
                                     <h2 class="stagger1">Judo</h2>
-                                    <p class="stagger2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab aspernatur debitis deleniti, dolore eveniet explicabo fugiat in maiores minus non numquam possimus recusandae temporibus, totam ullam, vero vitae voluptas voluptatibus.</p>
+                                    <p class="stagger2">Le terme judo est composé de 2 kanji signifiant approximativement :
+
+Jû (prononcer djou): Souplesse
+
+Dô : L’art, la voie
+
+Judo peut donc se traduire par la voie de la souplesse.
+
+
+
+Histoire
+
+Le souhait de Jigoro Kano, son fondateur, était de populariser une méthode visant à mieux utiliser ses ressources physiques et mentales en prenant comme point de départ le ju-jitsu des écoles tenshin shinyo ryu et kito ryu qu’il avait pratiqué durant 6 années. La légende dit qu’il découvrit les principes du judo lors d’un hiver rigoureux, en remarquant que les branches du cerisier réagissaient différemment sous le poids de la neige abondante. Les plus grosses cassaient alors que les plus souples pliaient et se débarrassaient de « l’agresseur » avec souplesse. La voie de la souplesse était née.
+
+La « légende », dans sa simplicité, n’est pas éloignée du souhait initial de populariser une méthode visant à mieux utiliser ses ressources physiques et mentales. Jigoro Kano avait conscience que le Ju-jitsu tel qu’il était pratiqué n’était plus adapté à l’époque moderne. Les techniques étaient parfois très dangereuses à apprendre et la plupart des maîtres étaient soit incompétents pédagogiquement ou enseignaient un ju-jitsu décadent et inefficace. En s’inspirant des méthodes de différentes gymnastiques occidentales, Jigoro Kano décida d’expurger du ju-jitsu les mouvements dangereux et de codifier les techniques restantes afin de faciliter l’enseignement sous formes de kata. Il était évident que l’art de la souplesse, débarrassé de sa vocation guerrière, n’était plus du ju-jitsu, mais un nouvel art martial à vocation callisthénique. Le Judo était né.
+
+Le judo connut un succès qui s’étendit largement au-delà des frontières japonaises et contribua largement à populariser les arts martiaux japonais, tout en entraînant la confusion entre art martial et sport de combat. Ainsi, le judo des origines s’orienta de plus en plus vers l’aspect sportif lorsque les champions du Kodokan eurent définitivement battu la plupart des écoles de Ju-jitsu au cours de combats organisés. Le pouvoir économique du Kodokan était ainsi définitivement installé dans le monde des arts martiaux japonais.
+
+Le judo commence à être enseigné au Japon en 1882 au Kodokan, en France dès 1935 par Maitre Mikinosuke Kawaishi.
+
+Moshe Feldenkrais crée le Jujitsu-Club de France, puis la Fédération française de judo est fondée en 1946. C’est aussi à cette époque que se développera le côté sportif et qu’apparaitront les premières compétitions. Le nombre de pratiquants de par le monde s’accroît alors considérablement.
+
+Le judo est la discipline la plus pratiquée en France, devant le Karaté et l’Aïkido. Il est devenu officiellement discipline olympique lors des Jeux de Tôkyô en 1964. Le judo féminin a fait son entrée dans le programme olympique aux Jeux de Séoul en 1988 comme sport de démonstration avant d’être définitivement accepté à partir des Jeux de Barcelone en 1992. 
+
+Dans le monde le judo est le troisième art martial le plus pratiqué derrière le karaté et le taekwondo avec 8 millions de pratiquants.
+
+</p>
                                 </div>
                             </div>
                             <hr/>
@@ -43,7 +69,41 @@
 
                                 <div class="col-xs-4">
                                     <h2 class="stagger1">Jujitsu</h2>
-                                    <p class="stagger2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab aspernatur debitis deleniti, dolore eveniet explicabo fugiat in maiores minus non numquam possimus recusandae temporibus, totam ullam, vero vitae voluptas voluptatibus.</p>
+                                    <p class="stagger2">Le terme Jujutsu est composé de 2 kanji. Selon la méthode de romanisation du japonais la plus répandue, la méthode Hepburn, ces kanji devraient se définir ainsi :
+
+« Ju » : mou, tendre, doux, souple
+
+« Jutsu » : art, moyen, technique
+
+Le Jujutsu se traduit donc par « L’art doux » ou « La technique de souplesse ».
+
+
+
+Malheureusement, on retrouve assez souvent « L’art doux » écrit d’une manière erronée, soit : « Ju-jitsu » ou encore « Jiu-jitsu ». Cette erreur est souvent du à une mauvaise prononciation du japonais par les occidentaux. Elle est même commise par de grands experts hauts gradés dans ces mêmes arts de combats, ce qui n’enlève en rien, à la compétence de ces experts. Toujours selon la méthode Hepburn, « Ju-jitsu » ou « Jiu-jitsu » se définiraient ainsi :
+
+« Ju » : mou, tendre, doux, souple
+
+Jitsu » : vérité, réalité, sincérité
+
+On remarque ici que l’écriture du kanji « Jutsu » (?) est très différente de l’écriture du kanji « Jitsu » (?). Le Jujitsu serait donc traduit de la manière suivante : « La vérité douce », « La réalité de la souplesse » ou « La sincérité du tendre », etc. Ce qui est très loin de la méthode de combat qu’est le « Jujutsu ». La confusion et la mauvaise prononciation entre « Jutsu » et « Jitsu », remonte aux premiers échanges des occidentaux avec les nippons vers la fin du 19e siècle. Pour toutes sortes de raisons, souvent politiques, la correction à la romanisation n’a jamais été apportée. Par contre, tous utilisent les bons kanji à l’écriture japonaise du Jujutsu.
+
+Une autre particularité est à noter au sujet de la méthode Hepburn : elle n’utilise pas de « traits d’unions » (-), ni d’espace, pour lier deux particules syllabaires ou deux kanji d’un même mots. Nous écrivons ainsi « Karaté » et non « Kara-té » ou « Kara té », « Judo » et non « Ju-do », « Ju do », « Jiu-do » ou « Jiu do » de même que nous écrivons « Jujutsu » et non « Ju-jutsu » ou « Ju jutsu ».
+
+Cependant la pratique du Jujutsu requiert davantage d’équilibre que de souplesse.
+
+
+
+Les origines du Jujutsu
+
+Le concept principal du jujutsu est le ju, littéralement la « souplesse », c’est-à-dire éviter l’attaque et la contrôler, sans opposition de force. Par cette technique, Ju yoku go o sei suru : le doux vainc le dur.
+
+Les méthodes de combat connues comme jutsu sont vieilles de 1 500 ans au moins. Les débuts du jutsu peuvent être situés dans la période turbulente au Japon qui s’étalait entre le VIIIe et le XVIe siècle. Cette période connut au Japon d’incessantes guerres civiles et les systèmes d’armement classiques furent développés et éprouvés sur les champs de bataille. Les techniques de combat rapproché faisaient partie intégrante de ces systèmes afin de combattre efficacement des adversaires portant armes et armure.
+
+La naissance du jutsu coïncide probablement avec l’origine de la classe des samouraïs datée à l’an 792. L’armée était constituée à cette époque de soldats se déplaçant à pied et armés de javelots. Les officiers étaient recrutés parmi les jeunes fils des grandes familles et étaient formés au maniement de l’arc, au commandement des troupes et également au combat sans armes. L’empereur Kammu construisit le Butokuden, une école formelle pour ces officiers que l’on connaît sous le nom de samouraïs.
+
+À la fin du XIIIe siècle, les Mongols tentent d’envahir le Japon et les samouraïs se défendent durant des années dans de terribles combats. Au XVe siècle, les maîtres d’armes établirent des écoles afin d’enseigner leur style du kenjutsu, l’art de l’épée. Entre 1467 et 1477, la guerre d’Onin fait rage, cette période voit le déclin du pouvoir des shoguns et le début du Sengoku Jidai, l’« Âge du pays en guerre », qui va durer cent cinquante ans.
+
+Le premier jutsu ryu reconnu fut formé par Takenouchie Hisamori en 1532 et consistait aussi bien en des techniques usant du katana (sabre), du bo (bâton) et du tanto (couteau-sabre) que du combat à mains nues. Les sauts et les coups de pied n’étaient peu ou pas enseignés dans le jutsu puisque les techniques étaient souvent destinées à des combattants portant une armure et que ces techniques sont risquées et difficiles à employer dans une situation de rue (vêtements mal adaptés, risque de glisser et tomber, de se faire saisir la jambe…). Le terme jujutsu commença à être utilisé vers 1600.</p>
                                 </div>
                             </div>
                             <hr/>
@@ -68,7 +128,27 @@
 
                                 <div class="col-xs-4">
                                     <h2 class="stagger1">Taiso</h2>
-                                    <p class="stagger2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab aspernatur debitis deleniti, dolore eveniet explicabo fugiat in maiores minus non numquam possimus recusandae temporibus, totam ullam, vero vitae voluptas voluptatibus.</p>
+                                    <p class="stagger2">Le Taïso (préparation du corps en japonais) est un sport d’origine japonaise.
+
+Souvent pratiqué dans un dojo, vêtu d’un judogi, ou d’un kimono plus léger, parfois simplement en tenue sportive.
+
+À l’origine, le Taïso nommait les activités physiques complémentaires pratiquées par les compétiteurs de judo ou de jujitsu dans le cadre de leur entrainement.
+
+De nos jours cette discipline intéresse un public de plus en plus large, sans limite d’âge, qui n’a pas forcément pratiqué de sport auparavant et qui recherche un loisir axé sur la culture et l’entretien physique.
+
+C’est une alternative ludique aux nombreux sports de remise en forme comme le step ou la gymnastique volontaire puisque certains cours de Taïso représentent une approche douce des arts martiaux tels que le judo et le jujitsu, sans aucun danger (pas de chute, pas de coup porté).
+
+Les exercices du Taïso sont donc très variés, la plupart se font en binômes :
+
+entretien cardio-respiratoire
+amélioration de l’endurance
+renforcement musculaire
+amélioration de l’équilibre
+amélioration des capacités psychomotrices
+amélioration de la coordination générale des membres
+assouplissement
+relaxation
+En France, le Taïso est affilié à la Fédération Française de Judo Jujitsu et Disciplines Associées.</p>
                                 </div>
                             </div>
                             <hr/>
@@ -79,82 +159,3 @@
                 </div><!-- end row -->
                 <div class="row-detail"></div>
             </div><!-- end container -->
-<script>
-    $(document).ready(function(){
-
-
-
-    var active = false;
-     var sport = $(window.location.hash);
-
-        if(sport.length < 1 || sport.hasClass('actived')){
-            return true;
-        }
-
-        var detail = sport.parent().nextAll('.row-detail:first');
-
-        var sport_detail = $('.sport_detail', sport).clone();
-
-
-        var showElement = function(){
-            detail.append(sport_detail);
-            sport_detail.slideDown();
-
-            // Animation
-            for(var i = 1; i <= 3; i++){
-                $('.stagger' + i, sport_detail).css({opacity:0, marginLeft: -20}).delay(300 + 200 * i).animate({opacity:1, marginLeft:0})
-            }
-
-            active = sport_detail;
-        };
-
-        var hideActive = function(){
-            var tmp = active;
-            tmp.slideUp(500, function(){
-                tmp.remove();
-            });
-        };
-
-        var buildSlideshow = function(){
-            $('.sport_slideshow', sport_detail).nivoSlider({
-                effect : 'boxRain',
-                directionNav: false,
-                controlNav: false,
-                pauseOnHover: false,
-                pauseTime: 3000
-            });
-        };
-
-       
-        // Traitement
-
-
-
-
-
-
-    $('.sport').click(function(e) {
-        e.preventDefault();
-        console.log("coucou");
-        window.location.hash = $(this).attr('id');
-        $('.sport').removeClass('actived');
-        sport.addClass('actived');
-
-        if(active){
-            hideActive();
-        }
-        showElement();
-        buildSlideshow();
-    });
-
-
-
-});
-
-var scrollTo = function(cible){
-    $('html,body').animate({
-        scrollTop: cible.offset().top
-    }, 750);
-};
-
-</script>
