--- a/partials/resultats/phototheque-resultats.html
+++ b/partials/resultats/phototheque-resultats.html
@@ -1,5 +1,5 @@
-<div class="row" ng-repeat="photos in resultat.podium | filter: {id:$index}" ng-if="$index < 3">
-    <div class="col-xs-6 col-sm-4 col-md-3">
+<div class="row">
+    <div class="col-xs-6 col-sm-4 col-md-3" ng-repeat="photos in resultat.podium">
         <div class="thumbnail text-center results_frame">
             <img src="{{photos.images}}" alt="" class="responsive">
             <div class="caption">
