--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -117,9 +117,20 @@ ul > li {
 	height: 60px;
 }
 
-#news{
-    padding-top:8rem;
-    padding-bottom:8rem;
+.news{
+	padding:0;
+	border:1px solid #fff;
+	background-color: #fff;
+}
+
+.news img{
+	width:100%;
+	height:300px;;
+}
+
+.cap{
+	text-align: center;
+	background-color: rgba(0, 0, 0, 0.7);
 }
 
 .footer{
@@ -228,34 +239,6 @@ p {
 	background-color: #E9EAEE;
 	color: #5A5A5A;
 	padding: 1rem;
-}
-
-.newsmid {
-	width:100%;
-	border:0.1rem solid #000;
-	padding:0.5rem;
-	margin-bottom: 1rem;
-}
-
-.newsmid p {
-	display:none;
-}
-
-.newsmid:hover p {
-	display:block;
-}
-
-.newsright > h2{
-	position:relative;
-	top:125px;
-	margin:0;
-	background-color: rgba(255, 255, 255, 0.5);
-	float: left;
-}
-
-.newsright {
-	margin-top: -32px;
-	padding:10px;
 }
 
 /* CALENDRIER */
@@ -400,9 +383,6 @@ h1 {
 	text-align: center;
 }
 
-.panelnews{
-	margin-top:100px;
-}
 
 /* Horaires */
 .table_horaires {
