--- a/partials/news/news.html
+++ b/partials/news/news.html
@@ -1,138 +1,189 @@
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+	<meta charset="UTF-8">
+	<title>Dojo Beauceron - Accueil</title>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+	<link rel="stylesheet" type="text/css" href="../../css/stylesheet.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css" />
+
+
+</head>
+<body>
+
+	<!-- navigation -->
+
+	<nav class="navbar navbar-default navbar-fixed-top">
+	    <div class="container-fluid">
+	        <!-- Brand and toggle get grouped for better mobile display -->
+	        <div class="navbar-header">
+	            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false">
+	                <span class="sr-only">Toggle navigation</span>
+	                <span class="icon-bar"></span>
+	                <span class="icon-bar"></span>
+	                <span class="icon-bar"></span>
+	            </button>
+	            <img class="pull-left" src="img/logo.jpeg"><a class="navbar-brand" id="title_logo" href="#">Dojo Beauceron</a>
+	        </div>
+
+	        <!-- Collect the nav links, forms, and other content for toggling -->
+	        <div class="collapse navbar-collapse" id="navbar">
+	            <ul class="nav navbar-nav navbar-right">
+	                <li class="active"><a href="index.html">Accueil</a></li>
+
+	                <li class="dropdown">
+	                    <!--<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Actualités <span class="caret"></span></a>-->
+	                    <a href="#">Actualités <span class="caret"></span></a>
+	                    <ul class="dropdown-menu">
+	                        <li><a href="news.html">News</a></li>
+	                        <li><a href="#">Calendrier</a></li>
+	                    </ul>
+	                </li>
+	                <li class="dropdown">
+	                    <a href="#">Le Club <span class="caret"></span></a>
+	                    <ul class="dropdown-menu">
+	                        <li><a href="#">Horaires</a></li>
+	                        <li><a href="Inscription_Tarifs.html">Inscriptions et Tarifs</a></li>
+	                        <li><a href="#">Dojos</a></li>
+	                        <li><a href="#">Historique</a></li>
+	                        <li><a href="#">Documents</a></li>
+	                    </ul>
+	                </li>
+	                <li><a href="resultats.html">Résultats</a></li>
+	                <li><a href="#">Contact</a></li>
+	                <form class="navbar-form navbar-left" role="search">
+	                    <div class="form-group">
+	                        <input type="text" class="form-control" placeholder="Search">
+	                    </div>
+	                    <button type="submit" class="btn btn-default">Rechercher</button>
+	                </form>
+	            </ul>
+	    </div><!-- /.navbar-collapse -->
+	  </div><!-- /.container-fluid -->
+	    <div id="liseret"></div>
+	</nav>
+
 <!-- Begin Body -->
-<div ng-contoller="newsController as newsCtrl" class="container pad">
-    <div class="no-gutter row">
-
-
-            <!--mid column-->
-            <div class="col-md-3">
-              <div class="panel" id="midCol">
-                <div class="panel-heading" style="background-color:#555;color:#eee;">Parcourir</div>
-
-
-                <div id="select"><h2>Choisissez :</h2>
-                <form method="post" action="news.html">
-                   <p>
-                       <label for="sport">Sport</label><br />
-                       <select name="sport" id="sport">
-                           <option value="judo">Judo</option>
-                           <option value="taiso">Taïso</option>
-                           <option value="jujitsu">Ju-Jitsu</optionewsmidn>
-                       </select></p></form>
-
-                <form method="post" action="news.html">
-                    <label for="annee">Année</label><br />
-                       <select name="annee" id="annee">
-                           <option value="2016">2016</option>
-                           <option value="2015">2015</option>
-                           <option value="2014">2014</option>
-                       </select>
-
-                </form>
-                </div>
-
-                <div class="panel-body panelnews">
-
-                  <div class="newsmid">
-                  <a href="#"><img class="img-responsive" src="img/news.jpeg"></a>
-                  <p>Ligne Titre</p>
-                  </div>
-
-                    <div class="newsmid">
-                  <a href="#"><img class="img-responsive" src="img/news.jpeg"></a>
-                  <p>Ligne Titre</p>
-                  </div>
-
-                  <div class="newsmid">
-                  <a href="#"><img class="img-responsive" src="img/news.jpeg"></a>
-                  <p>Ligne Titre</p>
-                  </div>
-
-                  <div class="newsmid">
-                  <a href="#"><img class="img-responsive" src="img/news.jpeg"></a>
-                  <p>Ligne Titre</p>
-                  </div>
-
-                  <div class="newsmid">
-                  <a href="#"><img class="img-responsive" src="img/news.jpeg"></a>
-                  <p>Ligne Titre</p>
-                  </div>
-
-                  <div class="newsmid">
-                 <a href="#"><img class="img-responsive" src="img/news.jpeg"></a>
-                  <p>Ligne Titre</p>
-                  </div>
-               </div>
-               </div><!--/panel-->
-            </div><!--/end mid column-->
-
-            <!-- right content column-->
-            <div class="col-md-7" id="content">
-                <div class="panel">
-                <div class="panel-heading" style="background-color:#111;color:#fff;">Dernières News</div>
-                <div class="panel-body">
-
-                  <div class="row">
-                  <div class="newsright"><h2>Judo</h2><img class="img-responsive" src="img/news.jpeg">
-
-                    <div class="newscontent">
-                    <h3>TITRE</h3>
-                    2013 was marked as the year of Responsive Web Design (RWD). The Web is filled with big brands, galleries and magical examples that media queries demonstrate the glory of responsive design.<br><br>
-                    <button class="btn btn-primary right-block">Link</button> <button class="btn btn-primary right-block">Link</button> <button class="btn btn-primary right-block">Link</button>
-                    <br><br>
-
-
-                  </div>
-
-                  <div class="newsright"><h2>Judo</h2><img class="img-responsive" src="img/news.jpeg">
-
-                    <div class="newscontent">
-                    <h3>TITRE</h3>
-                    2013 was marked as the year of Responsive Web Design (RWD). The Web is filled with big brands, galleries and magical examples that media queries demonstrate the glory of responsive design.</div><br><br><button class="btn btn-primary right-block">Link</button> <button class="btn btn-primary right-block">Link</button> <button class="btn btn-primary right-block">Link</button>
-                    <br><br>
-
-
-                  </div>
-
-                                    <div class="newsright"><h2>Judo</h2><img class="img-responsive" src="img/news.jpeg">
-
-                    <div class="newscontent">
-                    <h3>TITRE</h3>
-                    2013 was marked as the year of Responsive Web Design (RWD). The Web is filled with big brands, galleries and magical examples that media queries demonstrate the glory of responsive design.</div><br><br><button class="btn btn-primary right-block">Link</button> <button class="btn btn-primary right-block">Link</button> <button class="btn btn-primary right-block">Link</button>
-                    <br><br>
-
-
-                  </div>
-
-                                    <div class="newsright"><h2>Judo</h2><img class="img-responsive" src="img/news.jpeg">
-
-                    <div class="newscontent">
-                    <h3>TITRE</h3>
-                    2013 was marked as the year of Responsive Web Design (RWD). The Web is filled with big brands, galleries and magical examples that media queries demonstrate the glory of responsive design.</div><br><br><button class="btn btn-primary right-block">Link</button> <button class="btn btn-primary right-block">Link</button> <button class="btn btn-primary right-block">Link</button>
-                    <br><br>
-
-
-                  </div>
-
-                                    <div class="newsright"><h2>Judo</h2><img class="img-responsive" src="img/news.jpeg">
-
-                    <div class="newscontent">
-                    <h3>TITRE</h3>
-                    2013 was marked as the year of Responsive Web Design (RWD). The Web is filled with big brands, galleries and magical examples that media queries demonstrate the glory of responsive design.</div><br><br><button class="btn btn-primary right-block">Link</button> <button class="btn btn-primary right-block">Link</button> <button class="btn btn-primary right-block">Link</button>
-                    <br><br>
-
-
-                  </div>
-
-
-                  </div>
-                </div>
-
-
-
-
-                  </div><!--/panel-body-->
-                </div><!--/panel-->
-                <!--/end right column-->
-        </div>
-    </div>
+<div class="container">
+	<div class="row">
+		<div class="news col-md-4">
+			<img src="../../img/slide1.jpg" data-target=".myToggle1" cap-effect="fade" cap-speed="300" class="hcaption img-responsive">
+			<div class="myToggle1 cap">
+				<h3>TITRE NEWS</h3>
+				<p style='text-align:left; color:#fff;'>
+					Etiam fermentum non tellus pellentesque bibendum. Nulla quis lacinia sem. Nullam dictum nisl eget nunc pretium, eget interdum mauris volutpat.
+					Etiam fermentum non tellus pellentesque bibendum. Nulla quis lacinia sem. Nullam dictum nisl eget nunc pretium, eget interdum mauris volutpat.
+				</p>
+			</div>
+		</div>
+		<div class="news col-md-4">
+			<img src="../../img/slide2.jpg" data-target=".myToggle2" cap-effect="fade" cap-speed="300" class="hcaption img-responsive">
+			<div class="myToggle2 cap">
+				<h3>TITRE NEWS</h3>
+				<p style='text-align:left; color:#fff;'>
+					Etiam fermentum non tellus pellentesque bibendum. Nulla quis lacinia sem. Nullam dictum nisl eget nunc pretium, eget interdum mauris volutpat.
+					Etiam fermentum non tellus pellentesque bibendum. Nulla quis lacinia sem. Nullam dictum nisl eget nunc pretium, eget interdum mauris volutpat.
+				</p>
+			</div>
+		</div>
+		<div class="news col-md-4">
+			<img src="../../img/photo3.jpg" data-target=".myToggle3" cap-effect="fade" cap-speed="300" class="hcaption img-responsive">
+			<div class="myToggle3 cap">
+				<h3>TITRE NEWS</h3>
+				<p style='text-align:left; color:#fff;'>
+					Etiam fermentum non tellus pellentesque bibendum. Nulla quis lacinia sem. Nullam dictum nisl eget nunc pretium, eget interdum mauris volutpat.
+					Etiam fermentum non tellus pellentesque bibendum. Nulla quis lacinia sem. Nullam dictum nisl eget nunc pretium, eget interdum mauris volutpat.
+				</p>
+			</div>
+		</div>
+	</div>
+	<div class="row">
+		<div class="news col-md-4">
+			<img src="../../img/photo3.jpg" data-target=".myToggle4" cap-effect="fade" cap-speed="300" class="hcaption img-responsive">
+			<div class="myToggle4 cap">
+				<h3>TITRE NEWS</h3>
+				<p style='text-align:left; color:#fff;'>
+					Etiam fermentum non tellus pellentesque bibendum. Nulla quis lacinia sem. Nullam dictum nisl eget nunc pretium, eget interdum mauris volutpat.
+					Etiam fermentum non tellus pellentesque bibendum. Nulla quis lacinia sem. Nullam dictum nisl eget nunc pretium, eget interdum mauris volutpat.
+				</p>
+			</div>
+		</div>
+		<div class="news col-md-4">
+			<img src="../../img/slide1.jpg" data-target=".myToggle5" cap-effect="fade" cap-speed="300" class="hcaption img-responsive">
+			<div class="myToggle5 cap">
+				<h3>TITRE NEWS</h3>
+				<p style='text-align:left; color:#fff;'>
+					Etiam fermentum non tellus pellentesque bibendum. Nulla quis lacinia sem. Nullam dictum nisl eget nunc pretium, eget interdum mauris volutpat.
+					Etiam fermentum non tellus pellentesque bibendum. Nulla quis lacinia sem. Nullam dictum nisl eget nunc pretium, eget interdum mauris volutpat.
+				</p>
+			</div>
+		</div>
+		<div class="news col-md-4">
+			<img src="../../img/slide2.jpg" data-target=".myToggle6" cap-effect="fade" cap-speed="300" class="hcaption img-responsive">
+			<div class="myToggle6 cap">
+				<h3>TITRE NEWS</h3>
+				<p style='text-align:left; color:#fff;'>
+					Etiam fermentum non tellus pellentesque bibendum. Nulla quis lacinia sem. Nullam dictum nisl eget nunc pretium, eget interdum mauris volutpat.
+					Etiam fermentum non tellus pellentesque bibendum. Nulla quis lacinia sem. Nullam dictum nisl eget nunc pretium, eget interdum mauris volutpat.
+				</p>
+			</div>
+		</div>
+	</div>
+	<div class="row">
+		<div class="news col-md-4">
+			<img src="../../img/photo3.jpg" data-target=".myToggle7" cap-effect="fade" cap-speed="300" class="hcaption img-responsive">
+			<div class="myToggle7 cap">
+				<h3>TITRE NEWS</h3>
+				<p style='text-align:left; color:#fff;'>
+					Etiam fermentum non tellus pellentesque bibendum. Nulla quis lacinia sem. Nullam dictum nisl eget nunc pretium, eget interdum mauris volutpat.
+					Etiam fermentum non tellus pellentesque bibendum. Nulla quis lacinia sem. Nullam dictum nisl eget nunc pretium, eget interdum mauris volutpat.
+				</p>
+			</div>
+		</div>
+		<div class="news col-md-4">
+			<img src="../../img/photo3.jpg" data-target=".myToggle8" cap-effect="fade" cap-speed="300" class="hcaption img-responsive">
+			<div class="myToggle8 cap">
+				<h3>TITRE NEWS</h3>
+				<p style='text-align:left; color:#fff;'>
+					Etiam fermentum non tellus pellentesque bibendum. Nulla quis lacinia sem. Nullam dictum nisl eget nunc pretium, eget interdum mauris volutpat.
+					Etiam fermentum non tellus pellentesque bibendum. Nulla quis lacinia sem. Nullam dictum nisl eget nunc pretium, eget interdum mauris volutpat.
+				</p>
+			</div>
+		</div>
+		<div class="news col-md-4">
+			<img src="../../img/photo3.jpg" data-target=".myToggle9" cap-effect="fade" cap-speed="300" class="hcaption img-responsive">
+			<div class="myToggle9 cap">
+				<h3>TITRE NEWS</h3>
+				<p style='text-align:left; color:#fff;'>
+					Etiam fermentum non tellus pellentesque bibendum. Nulla quis lacinia sem. Nullam dictum nisl eget nunc pretium, eget interdum mauris volutpat.
+					Etiam fermentum non tellus pellentesque bibendum. Nulla quis lacinia sem. Nullam dictum nisl eget nunc pretium, eget interdum mauris volutpat.
+				</p>
+			</div>
+		</div>
+	</div>
 </div>
+
+
+
+	<div class="row">
+		<div class="footer">
+			<div class="col-xs-4">
+			</div>
+			<div class="col-xs-4">
+				<p>&copy; 2016, Dojo Beauceron, tous droits réservés</p>
+			</div>
+			<div class="col-xs-4">
+				<a href="#">Mentions légales</a>
+			</div>
+		</div>
+	</div>
+
+<script src="../../js/vendor/jquery/jquery.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+<script src="../../js/anim.js"></script>
+<script src="../../js/caption.js"></script>
+
+
+
+</body>
+</html>
