--- a/partials/common/navigation.html
+++ b/partials/common/navigation.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-default" ng-controller="LiensCtrl">
     <div class="container-fluid" ng-repeat="lien in liens">
         <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header"> <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>            <img alt="Brand" class="pull-left" src="../../img/logo.png"><a class="navbar-brand" id="title_logo" href="/index.html">Dojo Beauceron</a> </div>
+        <div class="navbar-header"> <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>            <img alt="Brand" class="pull-left" src="../../img/logo.png"><a class="navbar-brand" id="title_logo" href="#accueil">Dojo Beauceron</a> </div>
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="navbar">
             <ul class="nav navbar-nav pull-right">
