ajout du filtre 'tous' dans la page resultats

--- a/partials/resultats/select-sexe.html
+++ b/partials/resultats/select-sexe.html
@@ -2,6 +2,7 @@
     <form method="post" action="resultats.html">
             <label for="sexe">Catégorie H/F</label><br />
             <select name="sexe" id="sexe" title="selecteurs">
+                <option value="Tous">Tous</option>
                 <option value="Homme">Homme</option>
                 <option value="Femme">Femme</option>
             </select>
